testsuite/tests/unboxedsums/unboxedsums4p.stderr
unboxedsums4p.hs:3:3: error: [GHC-16863]
    Boxed sums not supported: ( 10 | )

