testsuite/tests/unboxedsums/unboxedsums4p.hs
module Lib where

f (10 |) = ()
